--- a/Cara kidney demo.ipynb
+++ b/Cara kidney demo.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +65,8 @@
     "    # Data Paths\n",
     "    # Use relative paths for portability\n",
     "\n",
-    "    RNA_PATH = \"/home/yingwang/cl/oodbenchmark/hys/filteredrna.h5ad\"\n",
-    "    ATAC_PATH = \"/home/yingwang/cl/oodbenchmark/hys/filteredatac.h5ad\"\n",
+    "    RNA_PATH = \"datapath/filteredrna.h5ad\"\n",
+    "    ATAC_PATH = \"datapath/filteredatac.h5ad\"\n",
     "    OUTPUT_PATH = os.path.join(\"output\", \"kidney\")\n",
     "    PREFIX = \"kidney_1127\"\n",
     "    \n",
