--- a/Cara kidney demo.ipynb
+++ b/Cara kidney demo.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# CARA: robust annotation and discovery of novel cell types in single-cell ATAC-seq data through cross-modal reference alignment\n",
-    "This notebook implements the CARA workflow for analyzing single-cell RNA-seq and ATAC-seq data. "
+    "This notebook implements the CARA workflow for analyzing Kidney dataset"
    ]
   },
   {
@@ -371,7 +371,30 @@
       "Epoch 43: Loss 133.8055\n",
       "Epoch 44: Loss 133.1887\n",
       "Epoch 45: Loss 133.7554\n",
-      "Epoch 46: Loss 133.4672\n"
+      "Epoch 46: Loss 133.4672\n",
+      "Epoch 47: Loss 133.6787\n",
+      "Epoch 48: Loss 133.0160\n",
+      "Epoch 49: Loss 132.6141\n",
+      "Epoch 50: Loss 132.3176\n",
+      "Epoch 51: Loss 132.2093\n",
+      "Epoch 52: Loss 132.0347\n",
+      "Epoch 53: Loss 132.4028\n",
+      "Epoch 54: Loss 131.8043\n",
+      "Epoch 55: Loss 131.5419\n",
+      "Epoch 56: Loss 132.2099\n",
+      "Epoch 57: Loss 131.0576\n",
+      "Epoch 58: Loss 131.5199\n",
+      "Epoch 59: Loss 131.0426\n",
+      "Epoch 60: Loss 131.0624\n",
+      "Epoch 61: Loss 130.5205\n",
+      "Epoch 62: Loss 130.5107\n",
+      "Epoch 63: Loss 130.5123\n",
+      "Epoch 64: Loss 130.6420\n",
+      "Epoch 65: Loss 130.2219\n",
+      "Epoch 66: Loss 130.1543\n",
+      "Epoch 67: Loss 129.4150\n",
+      "Epoch 68: Loss 130.3611\n",
+      "Epoch 69: Loss 129.0615\n"
      ]
     }
    ],
